plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

java {
	sourceCompatibility = '21'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.4'


	// NotNull & Nullable annotations
	implementation 'org.jetbrains:annotations:24.1.0'

	runtimeOnly 'com.h2database:h2'
	implementation project(":commons")
}
